--- a/PL/Volunteer/VolunteerWindow.xaml
+++ b/PL/Volunteer/VolunteerWindow.xaml
@@ -12,70 +12,79 @@
         <local:EnumToStringConverter x:Key="EnumConverter"/>
     </Window.Resources>
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
+    <ScrollViewer VerticalScrollBarVisibility="Auto">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
 
-        <!-- ID -->
-        <Label Content="ID:" Grid.Row="0" HorizontalAlignment="Left" />
-        <TextBox Text="{Binding Volunteer.Id}" Grid.Row="0" Margin="100,0" HorizontalAlignment="Stretch" 
-                 IsReadOnly="{Binding Volunteer.Id, Converter={StaticResource ConvertUpdateToTrueKey}}" />
+            <!-- ID -->
+            <Label Content="ID:" Grid.Row="0" HorizontalAlignment="Left" />
+            <TextBox Text="{Binding Volunteer.Id}" Grid.Row="0" Margin="100,0" HorizontalAlignment="Stretch" 
+                     IsReadOnly="{Binding Volunteer.Id, Converter={StaticResource ConvertUpdateToTrueKey}}" />
 
-        <!-- Name -->
-        <Label Content="Name:" Grid.Row="1" HorizontalAlignment="Left" />
-        <TextBox Text="{Binding Volunteer.Name, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Margin="100,0" HorizontalAlignment="Stretch" />
+            <!-- Name -->
+            <Label Content="Name:" Grid.Row="1" HorizontalAlignment="Left" />
+            <TextBox Text="{Binding Volunteer.Name, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" Margin="100,0" HorizontalAlignment="Stretch" />
 
-        <!-- Phone Number -->
-        <Label Content="Phone Number:" Grid.Row="2" HorizontalAlignment="Left" />
-        <TextBox Text="{Binding Volunteer.Number_phone, UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" Margin="100,0" HorizontalAlignment="Stretch" />
+            <!-- Phone Number -->
+            <Label Content="Phone Number:" Grid.Row="2" HorizontalAlignment="Left" />
+            <TextBox Text="{Binding Volunteer.Number_phone, UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" Margin="100,0" HorizontalAlignment="Stretch" />
 
-        <!-- Email -->
-        <Label Content="Email:" Grid.Row="3" HorizontalAlignment="Left" />
-        <TextBox Text="{Binding Volunteer.Email, UpdateSourceTrigger=PropertyChanged}" Grid.Row="3" Margin="100,0" HorizontalAlignment="Stretch" />
+            <!-- Email -->
+            <Label Content="Email:" Grid.Row="3" HorizontalAlignment="Left" />
+            <TextBox Text="{Binding Volunteer.Email, UpdateSourceTrigger=PropertyChanged}" Grid.Row="3" Margin="100,0" HorizontalAlignment="Stretch" />
 
-        <!-- Active Status -->
-        <Label Content="Active:" Grid.Row="4" HorizontalAlignment="Left" />
-        <CheckBox IsChecked="{Binding Volunteer.Active}" Grid.Row="4" Margin="100,0" HorizontalAlignment="Left" />
+            <!-- Active Status -->
+            <Label Content="Active:" Grid.Row="4" HorizontalAlignment="Left" />
+            <CheckBox IsChecked="{Binding Volunteer.Active}" Grid.Row="4" Margin="100,0" HorizontalAlignment="Left" />
 
-        <!-- Role -->
-        <Label Content="Role:" Grid.Row="5" HorizontalAlignment="Left" />
-        <ComboBox ItemsSource="{Binding Roles}" 
-                  SelectedItem="{Binding Volunteer.Role, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                  SelectionChanged="cbRoles_SelectionChanged"
-                  Grid.Row="5" Margin="100,0" />
+            <!-- Role -->
+            <Label Content="Role:" Grid.Row="5" HorizontalAlignment="Left" />
+            <ComboBox ItemsSource="{Binding Roles}" 
+                      SelectedItem="{Binding Volunteer.Role, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                      SelectionChanged="cbRoles_SelectionChanged"
+                      Grid.Row="5" Margin="100,0" />
 
-        <!-- Full Current Address -->
-        <Label Content="Full Current Address:" Grid.Row="6" HorizontalAlignment="Left" />
-        <TextBox Text="{Binding Volunteer.FullCurrentAddress, UpdateSourceTrigger=PropertyChanged}" Grid.Row="6" Margin="100,0" HorizontalAlignment="Stretch" />
+            <!-- Full Current Address -->
+            <Label Content="Full Current Address:" Grid.Row="6" HorizontalAlignment="Left" />
+            <TextBox Text="{Binding Volunteer.FullCurrentAddress, UpdateSourceTrigger=PropertyChanged}" Grid.Row="6" Margin="100,0" HorizontalAlignment="Stretch" />
 
-        <!-- Distance -->
-        <Label Content="Distance:" Grid.Row="7" HorizontalAlignment="Left" />
-        <TextBox Text="{Binding Volunteer.Distance, UpdateSourceTrigger=PropertyChanged}" Grid.Row="7" Margin="100,0" HorizontalAlignment="Stretch" />
+            <!-- Distance -->
+            <Label Content="Distance:" Grid.Row="7" HorizontalAlignment="Left" />
+            <TextBox Text="{Binding Volunteer.Distance, UpdateSourceTrigger=PropertyChanged}" Grid.Row="7" Margin="100,0" HorizontalAlignment="Stretch" />
 
-        <!-- Distance Type -->
-        <ComboBox ItemsSource="{Binding DistanceTypes}" 
-                  SelectedItem="{Binding Volunteer.DistanceType, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                  SelectionChanged="cbDistanceType_SelectionChanged"
-                  Grid.Row="8" 
-                  Margin="100,0,100,227" />
+            <!-- Distance Type -->
+            <Label Content="Distance Types:" Grid.Row="8" HorizontalAlignment="Left" />
+            <ComboBox ItemsSource="{Binding DistanceTypes}" 
+                      SelectedItem="{Binding Volunteer.DistanceType, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                      SelectionChanged="cbDistanceType_SelectionChanged"
+                      Grid.Row="8" Margin="100,0,100,0" />
 
-        <!-- Button (Add/Update) -->
-        <Button Content="{Binding ButtonText}" 
-                Click="btnAddUpdate_Click" 
-                Grid.Row="9" 
-                HorizontalAlignment="Left" 
-                VerticalAlignment="Top" 
-                Height="39" 
-                Width="118" 
-                Margin="135,161,0,0" />
-    </Grid>
+            <!-- Password -->
+            <Label Content="Password:" Grid.Row="9" HorizontalAlignment="Left" />
+            <TextBox Text="{Binding Volunteer.Password, UpdateSourceTrigger=PropertyChanged}" Grid.Row="9" Margin="100,0,100,107" />
+
+
+
+            <!-- Button (Add/Update) -->
+            <Button Content="{Binding ButtonText}" 
+                    Click="btnAddUpdate_Click" 
+                    Grid.Row="9" 
+                    HorizontalAlignment="Center" 
+                    VerticalAlignment="Top" 
+                    Height="39" 
+                    Width="118" 
+                    Margin="0,95,0,0" />
+        </Grid>
+    </ScrollViewer>
 </Window>
