--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -4,6 +4,8 @@
              xmlns:local="clr-namespace:PL"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        <local:Roles x:Key="RolesKey" />
+        <local:DistanceTypes x:Key="DistanceTypesKey" />
         <local:VolunteerFilterCollection x:Key="VolunteerFilterCollectionKey" />
     </Application.Resources>
 </Application>
