--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PL"
-             StartupUri="MainWindow.xaml">
+             StartupUri="LoginSystem.xaml">
+    <!--StartupUri="MainWindow.xaml">-->  
     <Application.Resources>
         <local:Roles x:Key="RolesKey" />
         <local:DistanceTypes x:Key="DistanceTypesKey" />
