--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PL"
-             StartupUri="LoginSystem.xaml">
+             StartupUri="login/LoginSystem.xaml">
     <!--StartupUri="MainWindow.xaml">-->  
     <Application.Resources>
         <local:Roles x:Key="RolesKey" />
