--- a/PL/login/LoginSystem.xaml
+++ b/PL/login/LoginSystem.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PL.LoginSystem"
+﻿<Window x:Class="PL.login.LoginSystem"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:PL"
